--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3667,14 +3667,14 @@ input, select, textarea {
 		justify-content: center;
 		background-color: inherit;
 		position: relative;
-		text-align: center;
+		text-align: left;
 		overflow-x: hidden;
 	}
 
 		.banner.style2 .content {
 			padding: 5.25rem 5.25rem 3.25rem 5.25rem ;
 			position: relative;
-			width: 40rem;
+			width: 60rem;
 			max-width: 100%;
 			background-color: inherit;
 			border-radius: 0.5rem;
